2nd commit navigation added

--- a/index.html
+++ b/index.html
@@ -26,6 +26,27 @@
         </section>
     </header>
     <!-- header section end  -->
+    <!-- navigation bar start  -->
+    <nav>
+        <div class="navigation-bar">
+            <div class="nav-logo">
+                <img src="images/logo/FCN.png" alt="">
+            </div>
+            <div class="nav-menu-item">
+                <ul>
+                    <li><a href="#">HOME</a></li>
+                    <li><a href="#">SERVICES</a></li>
+                    <li><a href="#">SHOP</a></li>
+                    <li><a href="#">BlOG</a></li>
+                    <li><a href="#">CONTACT</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <!-- navigation bar end  -->
+
+    <!-- top banner start  -->
+
 </body>
 
 </html>
