2nd commit navigation added

--- a/index.html
+++ b/index.html
@@ -27,25 +27,44 @@
     </header>
     <!-- header section end  -->
     <!-- navigation bar start  -->
-    <nav>
-        <div class="navigation-bar">
-            <div class="nav-logo">
-                <img src="images/logo/FCN.png" alt="">
-            </div>
-            <div class="nav-menu-item">
-                <ul>
-                    <li><a href="#">HOME</a></li>
-                    <li><a href="#">SERVICES</a></li>
-                    <li><a href="#">SHOP</a></li>
-                    <li><a href="#">BlOG</a></li>
-                    <li><a href="#">CONTACT</a></li>
-                </ul>
-            </div>
+
+    <div class="navigation-bar">
+        <div class="nav-logo">
+            <img src="images/logo/FCN.png" alt="">
         </div>
-    </nav>
+        <div class="nav-menu-item">
+            <ul>
+                <a href="#">HOME</a>
+                <a href="#">SERVICES</a>
+                <a href="#">SHOP</a>
+                <a href="#">BlOG</a>
+                <a href="#">CONTACT</a>
+            </ul>
+        </div>
+    </div>
+
     <!-- navigation bar end  -->
 
     <!-- top banner start  -->
+    <section class="top-banner">
+        <div class="banner-item">
+            <div class="banner-left">
+                <h2>Friend's Club Network</h2>
+                <h1>Built for Internet </h1>
+                <h1><span>Service</span></h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et
+                    dolore magna aliqua quis.</p>
+                <br>
+                <button>See more</button>
+            </div>
+            <div class="banenr-right">
+                <img src="images/banner&bg/b1.png" alt="">
+            </div>
+        </div>
+    </section>
+
+    <!-- top banner end  -->
 
 </body>
 
