3rd commit service added

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <a href="#">HOME</a>
                 <a href="#">SERVICES</a>
                 <a href="#">SHOP</a>
-                <a href="#">BlOG</a>
+                <a href="#">BLOG</a>
                 <a href="#">CONTACT</a>
             </ul>
         </div>
@@ -65,6 +65,75 @@
     </section>
 
     <!-- top banner end  -->
+
+    <!-- Service area start -->
+    <section class="service-section">
+        <p>OUR SERVICES</p>
+        <h1>We are internet service provider </h1>
+        <h1>company in Pahartali</h1>
+        <p>Get ready for more potential, more opportunity, and more of everything you expect from an internet service
+            provider</p>
+
+        <div class="service-items">
+            <div class="items01">
+                <h2>LITE</h2>
+                <img src="images/logo/package1.png" alt="">
+                <p>5 mbps speed / Off-Peak
+                    <hr>
+                    5mbps speed / Peak
+                    <hr>
+                    24/7 Support
+                    <hr>
+                    -
+                    <hr>
+                    -
+                    <hr>
+                    -
+                    <hr>
+                </p>
+                <p>BDT <span>500</span>/MO</p>
+                <button>REQUEST NOW</button>
+            </div>
+            <div class="items02">
+                <h2>STATER</h2>
+                <img src="images/logo/package2.png" alt="">
+                <p>15 mbps speed / Off-Peak
+                    <hr>
+                    15mbps speed / Peak
+                    <hr>
+                    24/7 Support
+                    <hr>
+                    100 mbps Youtube
+                    <hr>
+                    100 mbps Facebook
+                    <hr>
+                    100 mbps bdix
+                    <hr>
+                </p>
+                <p>BDT <span>800</span>/MO</p>
+                <button>REQUEST NOW</button>
+            </div>
+            <div class="items03">
+                <h2>STANDARD</h2>
+                <img src="images/logo/package3.png" alt="">
+                <p>50 mbps speed / Off-Peak
+                    <hr>
+                    25mbps speed / Peak
+                    <hr>
+                    24/7 Support
+                    <hr>
+                    100 mbps Youtube
+                    <hr>
+                    100 mbps Facebook
+                    <hr>
+                    100 mbps bdix
+                    <hr>
+                </p>
+                <p>BDT <span>800</span>/MO</p>
+                <button>REQUEST NOW</button>
+            </div>
+        </div>
+    </section>
 
 </body>
 
