--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
             <div class="items01">
                 <h2>LITE</h2>
                 <img src="images/logo/package1.png" alt="">
-                <p>5 mbps speed / Off-Peak
+                <p>5 mbps speed / FTB Server
                     <hr>
-                    5mbps speed / Peak
+                    5mbps speed / Movie Server
                     <hr>
                     24/7 Support
                     <hr>
@@ -97,9 +97,9 @@
             <div class="items02">
                 <h2>STATER</h2>
                 <img src="images/logo/package2.png" alt="">
-                <p>15 mbps speed / Off-Peak
+                <p>15 mbps speed / FTB Server
                     <hr>
-                    15mbps speed / Peak
+                    15mbps speed / Movie Server
                     <hr>
                     24/7 Support
                     <hr>
@@ -116,9 +116,9 @@
             <div class="items03">
                 <h2>STANDARD</h2>
                 <img src="images/logo/package3.png" alt="">
-                <p>50 mbps speed / Off-Peak
+                <p>50 mbps speed / FTB Server
                     <hr>
-                    25mbps speed / Peak
+                    25mbps speed / Movie Server
                     <hr>
                     24/7 Support
                     <hr>
@@ -126,15 +126,119 @@
                     <hr>
                     100 mbps Facebook
                     <hr>
-                    100 mbps bdix
+                    100 mbps Bdix
                     <hr>
                 </p>
-                <p>BDT <span>800</span>/MO</p>
+                <p>BDT <span>1000</span>/MO</p>
                 <button>REQUEST NOW</button>
             </div>
         </div>
     </section>
     <!-- Service area end  -->
+    <!-- ad banner area  start  -->
+    <div class="ad-banner">
+        <div>
+            <p>Call Us Now For Connect FCN</p>
+            <h5>+880 16435-514852</h5>
+        </div>
+        <div><button>Check Coverage in your area</button>
+        </div>
+    </div>
+    <!-- ad banner area  end  -->
+
+
+    <!-- blog area  start -->
+    <section class="blog-area">
+        <h4>Bahama News Update</h4>
+        <h2>What's news update is</h2>
+        <h2>coming</h2>
+
+        <div class="blog-items">
+            <div class="item0">
+                <img src="/images/banner&bg/futuristic-smart-city-with-5g-global-network-technology.jpg" alt="">
+                <h3>I Used The Web For A Day On A 50 MB Budget
+                </h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi turpis massa, dapibus nec libero vitae
+                </p>
+                <button>Read more</button>
+
+            </div>
+            <div class="item0">
+                <img src="/images/banner&bg/world.jpg" alt="">
+                <h3>The hardest leadership advice to follow</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi turpis massa, dapibus nec libero vitae
+                </p>
+                <button>Read more</button>
+
+            </div>
+            <div class="item0">
+                <img src="/images/banner&bg/rm373batch2-04.jpg" alt="">
+                <h3>The Most Popular New Top Business Apps</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi turpis massa, dapibus nec libero vitae
+                </p>
+                <button>Read more</button>
+
+            </div>
+        </div>
+        <div class="blog-items">
+            <div class="item0">
+                <img src="/images/banner&bg/futuristic-smart-city-with-5g-global-network-technology.jpg" alt="">
+                <h3>I Used The Web For A Day On A 50 MB Budget
+                </h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi turpis massa, dapibus nec libero vitae
+                </p>
+                <button>Read more</button>
+
+            </div>
+            <div class="item0">
+                <img src="/images/banner&bg/world.jpg" alt="">
+                <h3>The hardest leadership advice to follow</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi turpis massa, dapibus nec libero vitae
+                </p>
+                <button>Read more</button>
+
+            </div>
+            <div class="item0">
+                <img src="/images/banner&bg/rm373batch2-04.jpg" alt="">
+                <h3>The Most Popular New Top Business Apps</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi turpis massa, dapibus nec libero vitae
+                </p>
+                <button>Read more</button>
+
+            </div>
+        </div>
+    </section>
+
+
+    <!-- blog area end  -->
+
+
+
+
+    <footer>
+        <div class="footer-area">
+            <div class="footer-item">
+                <h4>FCN_Friend's Club Network</h4>
+                <p>Head Office</p>
+                <address>Abdurpara Majar Gate, Antaranga Tower, Halishahor South Kattoli, Halishahor, Chattogram
+                </address>
+                <input type="email" placeholder="Your Email Address">
+                <button>send</button>
+            </div>
+            <div class="footer-item">
+                <h4>Visit us</h4>
+                <address>Noapara, Pahartali,Chittagong.</address>
+                <p>Phone:016435-514852</p>
+                <p>Email:rifat@fcn.net</p>
+                <p>Email:admin@fcn.net</p>
+            </div>
+
+        </div>
+        <hr>
+        <p class="copy-right">© Copyright- FCN 2022 & Design by Arif</p>
+
+    </footer>
+
 
 </body>
 
