--- a/index.html
+++ b/index.html
@@ -226,8 +226,7 @@
                 <button>send</button>
             </div>
             <div class="footer-item">
-                <h4>Visit us</h4>
-                <address>Noapara, Pahartali,Chittagong.</address>
+                <h4>Contact us</h4>
                 <p>Phone:016435-514852</p>
                 <p>Email:rifat@fcn.net</p>
                 <p>Email:admin@fcn.net</p>
