--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 
         <div class="blog-items">
             <div class="item0">
-                <img src="/images/banner&bg/futuristic-smart-city-with-5g-global-network-technology.jpg" alt="">
+                <img src="images/banner&bg/futuristic-smart-city-with-5g-global-network-technology.jpg" alt="">
                 <h3>I Used The Web For A Day On A 50 MB Budget
                 </h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi turpis massa, dapibus nec libero vitae
