--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 
             </div>
             <div class="item0">
-                <img src="/images/banner&bg/world.jpg" alt="">
+                <img src="images/banner&bg/world.jpg" alt="">
                 <h3>The hardest leadership advice to follow</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi turpis massa, dapibus nec libero vitae
                 </p>
@@ -172,7 +172,7 @@
 
             </div>
             <div class="item0">
-                <img src="/images/banner&bg/rm373batch2-04.jpg" alt="">
+                <img src="images/banner&bg/rm373batch2-04.jpg" alt="">
                 <h3>The Most Popular New Top Business Apps</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi turpis massa, dapibus nec libero vitae
                 </p>
@@ -182,7 +182,7 @@
         </div>
         <div class="blog-items">
             <div class="item0">
-                <img src="/images/banner&bg/futuristic-smart-city-with-5g-global-network-technology.jpg" alt="">
+                <img src="images/banner&bg/futuristic-smart-city-with-5g-global-network-technology.jpg" alt="">
                 <h3>I Used The Web For A Day On A 50 MB Budget
                 </h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi turpis massa, dapibus nec libero vitae
@@ -191,7 +191,7 @@
 
             </div>
             <div class="item0">
-                <img src="/images/banner&bg/world.jpg" alt="">
+                <img src="images/banner&bg/world.jpg" alt="">
                 <h3>The hardest leadership advice to follow</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi turpis massa, dapibus nec libero vitae
                 </p>
@@ -199,7 +199,7 @@
 
             </div>
             <div class="item0">
-                <img src="/images/banner&bg/rm373batch2-04.jpg" alt="">
+                <img src="images/banner&bg/rm373batch2-04.jpg" alt="">
                 <h3>The Most Popular New Top Business Apps</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi turpis massa, dapibus nec libero vitae
                 </p>
